// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider component Divider should change color 1`] = `
<div>
  <div
    class="css-320vg8-Divider"
  />
</div>
`;

exports[`Divider component gradient divider should match snapshot 1`] = `
<div>
  <div
    class="css-9kbgnh-Divider"
  />
</div>
`;

exports[`Divider component solid divider should match snapshot 1`] = `
<div>
  <div
    class="css-1agykh8-Divider"
  />
</div>
`;
